@@ -18,11 +18,8 @@ Create a html page with the content on **Client** part, access it from browser a
     }
 
     location ~ /ev/(.*) {
-        # activate subscriber mode for this location
-        push_stream_subscriber;
-
-        # activate event source support for this location
-        push_stream_eventsource_support on;
+        # activate event source mode for this location
+        push_stream_subscriber eventsource;
 
         # positional channel path
         push_stream_channels_path                   $1;
@@ -86,11 +83,8 @@ If needed you can change this behavior changing the javascript usage, like the e
     }
 
     location /ev {
-        # activate subscriber mode for this location
-        push_stream_subscriber;
-
-        # activate event source support for this location
-        push_stream_eventsource_support on;
+        # activate event source mode for this location
+        push_stream_subscriber eventsource;
 
         # positional channel path
         push_stream_channels_path                   $arg_channels;
