@@ -112,14 +112,11 @@ http {
         }
 
         location ~ /ev/(.*) {
-            # activate subscriber mode for this location
-            push_stream_subscriber;
+            # activate event source mode for this location
+            push_stream_subscriber eventsource;
 
             # positional channel path
             push_stream_channels_path                   $1;
-
-            # activate event source support for this location
-            push_stream_eventsource_support on;
         }
 
         location ~ /lp/(.*) {
